--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Google Maps Manager</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM0hfhErL5ulkorHR0fM1Hcy-o4N8rxeo"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLdY-uaE28FNRcHnnkF6VWz6PIHP8vArw"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/node_modules/@google/markerclusterer/src/markerclusterer.js"></script>
-  <script src="/src/google-maps-manager.js"></script>
+  <script src="node_modules/@google/markerclusterer/src/markerclusterer.js"></script>
+  <script src="src/google-maps-manager.js"></script>
 </head>
 
 <body>
